--- a/index.html
+++ b/index.html
@@ -2930,8 +2930,8 @@
 
 
 
-            <svg class="tactic__item-img hover__img" id="t2svg" xmlns="http://www.w3.org/2000/svg" xml:space="preserve"
-              width="91.2352mm" version="1.1"
+            <svg class="tactic__item-img hover__img hover-ios " id="t2svg" xmlns="http://www.w3.org/2000/svg"
+              xml:space="preserve" width="91.2352mm" version="1.1"
               style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
               viewBox="0 0 558.39 480.12" xmlns:xlink="http://www.w3.org/1999/xlink">
               <defs>
@@ -3177,18 +3177,25 @@
               </defs>
               <g id="Слой_x0020_1">
                 <metadata id="CorelCorpID_0Corel-Layer" />
-                <path class="fil0"
-                  d="M179.24 63.18c-89.98,-23.13 -172.92,-21.67 -179.11,83.82 -3.91,66.59 79.08,80.22 86.57,106.26 7.15,24.84 -0.48,30.24 -20.23,54.82 -38.82,48.32 -53.25,56.11 -35.91,107.99 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 72.08,-25.2 111.47,-29.57 73.08,-8.12 90.82,21.99 171.99,12.28 55.57,-6.65 85.3,-31.32 91.31,-72.04 4.65,-31.49 -6.17,-39.9 -27.78,-66.44 -38.62,-47.41 -68.98,-52.33 -21.63,-117.8 74.67,-103.26 -36.57,-218.01 -99.3,-183.33 -161.88,89.49 -84.78,94.04 -229.36,56.87z">
-                  <animate id="t2anim1" attributeName="d"
-                    values="M179.24 63.18c-89.98,-23.13 -172.92,-21.67 -179.11,83.82 -3.91,66.59 79.08,80.22 86.57,106.26 7.15,24.84 -0.48,30.24 -20.23,54.82 -38.82,48.32 -53.25,56.11 -35.91,107.99 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 72.08,-25.2 111.47,-29.57 73.08,-8.12 90.82,21.99 171.99,12.28 55.57,-6.65 85.3,-31.32 91.31,-72.04 4.65,-31.49 -6.17,-39.9 -27.78,-66.44 -38.62,-47.41 -68.98,-52.33 -21.63,-117.8 74.67,-103.26 -36.57,-218.01 -99.3,-183.33 -161.88,89.49 -84.78,94.04 -229.36,56.87z;
+                <g class="bg-blu bg-blu-avt">
+                  <path class="fil0 "
+                    d="M179.24 63.18c-89.98,-23.13 -172.92,-21.67 -179.11,83.82 -3.91,66.59 79.08,80.22 86.57,106.26 7.15,24.84 -0.48,30.24 -20.23,54.82 -38.82,48.32 -53.25,56.11 -35.91,107.99 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 72.08,-25.2 111.47,-29.57 73.08,-8.12 90.82,21.99 171.99,12.28 55.57,-6.65 85.3,-31.32 91.31,-72.04 4.65,-31.49 -6.17,-39.9 -27.78,-66.44 -38.62,-47.41 -68.98,-52.33 -21.63,-117.8 74.67,-103.26 -36.57,-218.01 -99.3,-183.33 -161.88,89.49 -84.78,94.04 -229.36,56.87z">
+                    <animate id="t2anim1" attributeName="d"
+                      values="M179.24 63.18c-89.98,-23.13 -172.92,-21.67 -179.11,83.82 -3.91,66.59 79.08,80.22 86.57,106.26 7.15,24.84 -0.48,30.24 -20.23,54.82 -38.82,48.32 -53.25,56.11 -35.91,107.99 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 72.08,-25.2 111.47,-29.57 73.08,-8.12 90.82,21.99 171.99,12.28 55.57,-6.65 85.3,-31.32 91.31,-72.04 4.65,-31.49 -6.17,-39.9 -27.78,-66.44 -38.62,-47.41 -68.98,-52.33 -21.63,-117.8 74.67,-103.26 -36.57,-218.01 -99.3,-183.33 -161.88,89.49 -84.78,94.04 -229.36,56.87z;
                          M 179.24,63.18 C 49.079845,69.549354 6.32,41.51 0.13,147 -3.78,213.59 -4.7105774,219.08224 40.92514,259.36331 89.781124,300.98743 52.651769,326.2232 46.634227,334.5277 33.753315,350.8053 13.22,364.19 30.56,416.07 c 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 73.09722,-44.01855 112.48722,-48.38855 C 368.10722,406.72145 384.83,455.65 466,445.94 521.57,439.29 551.3,414.62 557.31,373.9 561.96,342.41 551.14,334 529.53,307.46 490.91,260.05 450.88642,248.51808 498.23642,183.04808 572.90642,79.788076 485.06246,-15.634761 408.6,6.33 238.58225,62.760379 303.98423,54.59514 179.24,63.2 Z"
-                    dur="0.2s" begin="generalt2.mouseover" fill="freeze" />
+                      dur="0.2s" begin="generalt2.mouseover" fill="freeze" />
 
-                  <animate id="t2anim2" attributeName="d" fill="freeze"
-                    values="M 179.24,63.18 C 49.079845,69.549354 6.32,41.51 0.13,147 -3.78,213.59 -4.7105774,219.08224 40.92514,259.36331 89.781124,300.98743 52.651769,326.2232 46.634227,334.5277 33.753315,350.8053 13.22,364.19 30.56,416.07 c 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 73.09722,-44.01855 112.48722,-48.38855 C 368.10722,406.72145 384.83,455.65 466,445.94 521.57,439.29 551.3,414.62 557.31,373.9 561.96,342.41 551.14,334 529.53,307.46 490.91,260.05 450.88642,248.51808 498.23642,183.04808 572.90642,79.788076 485.06246,-15.634761 408.6,6.33 238.58225,62.760379 303.98423,54.59514 179.24,63.2 Z;
+                    <animate id="t2anim2" attributeName="d" fill="freeze"
+                      values="M 179.24,63.18 C 49.079845,69.549354 6.32,41.51 0.13,147 -3.78,213.59 -4.7105774,219.08224 40.92514,259.36331 89.781124,300.98743 52.651769,326.2232 46.634227,334.5277 33.753315,350.8053 13.22,364.19 30.56,416.07 c 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 73.09722,-44.01855 112.48722,-48.38855 C 368.10722,406.72145 384.83,455.65 466,445.94 521.57,439.29 551.3,414.62 557.31,373.9 561.96,342.41 551.14,334 529.53,307.46 490.91,260.05 450.88642,248.51808 498.23642,183.04808 572.90642,79.788076 485.06246,-15.634761 408.6,6.33 238.58225,62.760379 303.98423,54.59514 179.24,63.2 Z;
                            M179.24 63.18c-89.98,-23.13 -172.92,-21.67 -179.11,83.82 -3.91,66.59 79.08,80.22 86.57,106.26 7.15,24.84 -0.48,30.24 -20.23,54.82 -38.82,48.32 -53.25,56.11 -35.91,107.99 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 72.08,-25.2 111.47,-29.57 73.08,-8.12 90.82,21.99 171.99,12.28 55.57,-6.65 85.3,-31.32 91.31,-72.04 4.65,-31.49 -6.17,-39.9 -27.78,-66.44 -38.62,-47.41 -68.98,-52.33 -21.63,-117.8 74.67,-103.26 -36.57,-218.01 -99.3,-183.33 -161.88,89.49 -84.78,94.04 -229.36,56.87z"
-                    dur="0.5s" begin="generalt2.mouseout" />
-                </path>
+                      dur="0.5s" begin="generalt2.mouseout" />
+                  </path>
+                  <g class="bg-blu-fone">
+                    <path
+                      d="M 179.24,63.18 C 49.079845,69.549354 6.32,41.51 0.13,147 -3.78,213.59 -4.7105774,219.08224 40.92514,259.36331 89.781124,300.98743 52.651769,326.2232 46.634227,334.5277 33.753315,350.8053 13.22,364.19 30.56,416.07 c 18.81,56.28 96.17,84.41 151.98,47.16 35.91,-23.97 73.09722,-44.01855 112.48722,-48.38855 C 368.10722,406.72145 384.83,455.65 466,445.94 521.57,439.29 551.3,414.62 557.31,373.9 561.96,342.41 551.14,334 529.53,307.46 490.91,260.05 450.88642,248.51808 498.23642,183.04808 572.90642,79.788076 485.06246,-15.634761 408.6,6.33 238.58225,62.760379 303.98423,54.59514 179.24,63.2 Z">
+                    </path>
+                  </g>
+                </g>
                 <g id="_1919448679312">
                   <path class="fil1"
                     d="M474.22 382.92c0,4.72 -72.48,8.54 -161.88,8.54 -89.4,0 -161.88,-3.82 -161.88,-8.54 0,-4.72 72.48,-8.54 161.88,-8.54 89.4,0 161.88,3.82 161.88,8.54z" />
@@ -3461,7 +3468,7 @@
                           d="M429.88 210.44c0.06,-3.14 1.11,-6.26 3.03,-8.74 1.92,-2.48 4.72,-4.28 7.79,-4.91 1.35,-0.28 2.78,-0.33 4.09,0.08 2.86,0.9 4.71,3.97 4.7,6.97 -0.01,3 -1.63,5.83 -3.84,7.86 -2.21,2.03 -4.98,3.34 -7.79,4.4l-7.99 -5.66z" />
                         <path class="fil28"
                           d="M424.13 221.33c1.04,0.17 1.88,1 2.3,1.97 0.42,0.96 0.48,2.04 0.44,3.09 -0.09,2.13 -0.57,4.22 -0.94,6.32 -0.36,2.1 -0.61,4.26 -0.21,6.36 0.4,2.09 1.52,4.13 3.35,5.22 -1.15,-1.36 -1.79,-3.12 -1.94,-4.9 -0.15,-1.78 0.17,-3.57 0.77,-5.25 0.26,-0.74 0.58,-1.46 0.86,-2.19 1.01,-2.63 1.59,-5.53 0.91,-8.26 -0.19,-0.74 -0.47,-1.47 -0.97,-2.05 -0.79,-0.92 -2.01,-1.36 -3.21,-1.57l-1.36 1.27z" />
-                        <path class="fil28"
+                        <path class="fil28 "
                           d="M416.07 213.31c0.63,3.84 2.98,7.32 6.55,8.87 0.4,0.17 0.83,0.33 1.26,0.3 0.37,-0.03 0.73,-0.18 1.09,-0.25 1.52,-0.29 2.96,1 3.44,2.47 0.48,1.47 0.25,3.06 0.11,4.6 -0.23,2.42 -0.22,4.94 0.68,7.2 1.77,4.43 6.62,7.05 8.38,11.48 0.76,1.92 0.88,4.04 1.52,6.01 1.51,4.65 6.1,8.04 10.97,8.4 4.87,0.36 9.79,-2.21 12.52,-6.26 1.05,-1.55 1.79,-3.29 2.4,-5.06 0.62,-1.79 1.11,-3.65 1.15,-5.54 0.1,-5.45 -3.71,-10.41 -8.48,-13.03 -3.89,-2.14 -8.61,-3.15 -11.52,-6.51 -3.98,-4.59 -3.2,-11.95 -7.09,-16.6 -3.57,-4.26 -10.11,-4.87 -15.38,-3.1 -3.42,1.15 -6.82,3.51 -7.6,7.04z">
 
                           <animate id="path257anim1" attributeName="d"
@@ -3510,7 +3517,7 @@
                     <polygon class="fil31" points="180.45,261.71 180.45,189.42 304.92,189.42 304.92,261.71 " />
                     <polygon class="fil30" points="254.51,283.3 230.86,283.3 230.86,265.31 254.51,265.31 " />
                     <polygon class="fil30" points="268.67,287.28 216.7,287.28 216.7,283.3 268.67,283.3 " />
-                    <g>
+                    <g class="gg">
                       <g>
                         <path class="fil32"
                           d="M163.42 216.18l-0.32 0.18c-1.11,0.61 -2.51,0.21 -3.13,-0.9l-7.11 -12.87 4.34 -2.4 7.11 12.87c0.61,1.11 0.21,2.51 -0.9,3.13z">
@@ -3554,12 +3561,12 @@
 
                       </path>
                     </g>
-                    <path class="fil34"
+                    <path class="fil34 a1"
                       d="M239.86 123.81c0,-5.9 -6.77,-10.68 -15.12,-10.68 -8.35,0 -15.12,4.78 -15.12,10.68 0,5.9 6.77,10.68 15.12,10.68 2.23,0 4.34,-0.34 6.25,-0.96l4.96 3.36 -2.27 -4.47c3.75,-1.94 6.18,-5.08 6.18,-8.61zm-21.81 1.64l0 0c-1.06,0 -1.92,-0.86 -1.92,-1.92 0,-1.06 0.86,-1.92 1.92,-1.92 1.06,0 1.92,0.86 1.92,1.92 0,1.06 -0.86,1.92 -1.92,1.92zm6.69 0l0 0c-1.06,0 -1.92,-0.86 -1.92,-1.92 0,-1.06 0.86,-1.92 1.92,-1.92 1.06,0 1.92,0.86 1.92,1.92 0,1.06 -0.86,1.92 -1.92,1.92zm6.69 0l0 0c-1.06,0 -1.92,-0.86 -1.92,-1.92 0,-1.06 0.86,-1.92 1.92,-1.92 1.06,0 1.92,0.86 1.92,1.92 0,1.06 -0.86,1.92 -1.92,1.92z">
                       <animateMotion dur="0.6s" begin="generalt2.mouseover" fill="freeze" path="M0,0 1,5 -30,-8 0,0"
                         calcMode="spline" keySplines="0.5 0 0.5 1 ; 0.5 0 0.5 1 ; 0.5 0 0.5 1 ; 0.5 0 0.5 1" />
                     </path>
-                    <path class="fil34"
+                    <path class="fil34 light"
                       d="M276.87 143.18c-0.16,0 -0.3,-0.02 -0.45,-0.06 0.02,0.77 0.64,1.39 1.42,1.39l0.75 0 0 0.27c0,0.59 0.47,1.07 1.06,1.07l3.38 0c0.59,0 1.07,-0.47 1.07,-1.07l0 -0.27 0.75 0c0.77,0 1.4,-0.62 1.42,-1.39 -0.15,0.04 -0.3,0.06 -0.45,0.06l-8.93 0zm-0.45 -1.22l0 0 9.83 0 0 -1.41 -9.83 0 0 1.41zm0 -2.8l0 0 9.83 0 0 -1.4 -9.83 0 0 1.4zm5.31 -9.23l0 0 -0.4 0.24 -1.86 -1.12 1.86 6.33 1.87 -6.33 -1.47 0.88zm7.87 -14.68l0 0c-2.12,-2.12 -5.04,-3.43 -8.27,-3.43 -0.43,0 -0.88,0.02 -1.32,0.08 -5.29,0.58 -9.62,4.86 -10.27,10.13 -0.06,0.49 -0.09,0.97 -0.09,1.45 0,3.75 1.79,7.3 4.86,9.52 1.29,0.93 2.3,2.15 2.98,3.54l2.6 0 -3.17 -10.8 4.42 2.66 4.42 -2.66 -3.17 10.8 2.63 0c0.7,-1.39 1.74,-2.63 3.07,-3.62 2.97,-2.19 4.75,-5.72 4.75,-9.41 0,-3.22 -1.31,-6.14 -3.43,-8.26z">
                       <animate attributeName="fill" from="white" to="yellow" dur="0.5s" begin="generalt2.mouseover"
                         fill="freeze" />
@@ -3568,7 +3575,7 @@
                         fill="freeze" />
 
                     </path>
-                    <path class="fil34" style="fill: white"
+                    <path class="fil34 wifi" style="fill: white"
                       d="M169.5 159.3c-1.65,0 -2.98,1.34 -2.98,2.99 0,1.65 1.34,2.98 2.98,2.98 1.65,0 2.98,-1.34 2.98,-2.98 0,-1.65 -1.34,-2.99 -2.98,-2.99zm-6.97 -4.3l0 0 2.63 2.74c1.14,-1.08 2.65,-1.75 4.35,-1.75 1.69,0 3.21,0.67 4.35,1.75l2.63 -2.74c-1.81,-1.74 -4.27,-2.81 -6.97,-2.81 -2.71,0 -5.16,1.07 -6.97,2.81zm6.97 -18.79l0 0c-7,0 -13.34,2.76 -18.02,7.24l2.63 2.75c4,-3.83 9.41,-6.19 15.4,-6.19 5.98,0 11.39,2.35 15.4,6.19l2.63 -2.75c-4.68,-4.48 -11.03,-7.24 -18.02,-7.24zm-12.43 13.09l0 0 2.63 2.74c2.55,-2.44 5.99,-3.94 9.8,-3.95 3.81,0 7.25,1.5 9.8,3.95l2.63 -2.74c-3.23,-3.09 -7.6,-5 -12.43,-5 -4.83,0 -9.2,1.91 -12.43,5z">
                       <animate attributeName="fill" from="white" to="green" dur="0.5s" begin="generalt2.mouseover"
                         fill="freeze" />
@@ -3580,7 +3587,7 @@
 
 
                     </path>
-                    <path class="fil33"
+                    <path class="fil33 box"
                       d="M237.1 158.1c0.16,0.66 0.75,1.12 1.43,1.12l23.48 0c0.68,0 1.27,-0.46 1.43,-1.12l3.47 -14.04 -33.28 0 3.47 14.04zm21.74 -11.54l0 0c0,-0.42 0.34,-0.77 0.77,-0.77 0.42,0 0.77,0.34 0.77,0.77l0 9.84c0,0.42 -0.34,0.77 -0.77,0.77 -0.42,0 -0.77,-0.34 -0.77,-0.77l0 -9.84zm-4.67 0l0 0c0,-0.42 0.34,-0.77 0.77,-0.77 0.42,0 0.77,0.34 0.77,0.77l0 9.84c0,0.42 -0.34,0.77 -0.77,0.77 -0.42,0 -0.77,-0.34 -0.77,-0.77l0 -9.84zm-4.67 0l0 0c0,-0.42 0.34,-0.77 0.77,-0.77 0.42,0 0.77,0.34 0.77,0.77l0 9.84c0,0.42 -0.34,0.77 -0.77,0.77 -0.42,0 -0.77,-0.34 -0.77,-0.77l0 -9.84zm-4.67 0l0 0c0,-0.42 0.34,-0.77 0.77,-0.77 0.42,0 0.77,0.34 0.77,0.77l0 9.84c0,0.42 -0.34,0.77 -0.77,0.77 -0.42,0 -0.77,-0.34 -0.77,-0.77l0 -9.84zm-4.67 0l0 0c0,-0.42 0.34,-0.77 0.77,-0.77 0.42,0 0.77,0.34 0.77,0.77l0 9.84c0,0.42 -0.34,0.77 -0.77,0.77 -0.42,0 -0.77,-0.34 -0.77,-0.77l0 -9.84zm26.71 -6.56l0 0 -4.98 0 -7.2 -7.2c-0.41,-0.41 -1.08,-0.41 -1.49,0 -0.41,0.41 -0.41,1.08 0,1.49l5.72 5.72 -17.29 0 5.72 -5.72c0.41,-0.41 0.41,-1.08 0,-1.49 -0.41,-0.41 -1.08,-0.41 -1.49,0l-7.2 7.2 -4.98 0c-0.82,0 -1.49,0.67 -1.49,1.49 0,0.82 0.67,1.49 1.49,1.49l33.2 0c0.82,0 1.49,-0.67 1.49,-1.49 0,-0.82 -0.67,-1.49 -1.49,-1.49z">
                       <animateMotion dur="0.6s" begin="generalt2.mouseover" fill="freeze" path="M0,0 2,2 0,-20 0,0"
                         calcMode="spline" keySplines="1 0 0.21 0.65" />
@@ -3612,7 +3619,7 @@
                         <polygon class="fil15" points="245.98,245.37 241.73,245.37 241.73,222.01 245.98,222.01 " />
                       </g>
                       <g>
-                        <path class="fil33" d="m 221.95,245.37 h -4.26 v -6.3 h 4.26 z ">
+                        <path class="fil33 column" d="m 221.95,245.37 h -4.26 v -6.3 h 4.26 z ">
                           <animate attributeName="d" values="m 221.95,245.37 h -4.26 v -6.3 h 4.26 z;
                             m 221.95,245.37 h -4.26 v -13.3 h 4.26 z" dur="0.2s" begin="generalt2.mouseover + 0.2s"
                             fill="freeze" />
@@ -3706,7 +3713,7 @@
                         d="M312.44 216.64c0,3.43 -1.17,6.21 -4.6,6.21l-17.64 0c-3.43,0 -4.97,-2.78 -4.97,-6.21l0 -6.57c0,-3.43 1.39,-6.21 4.82,-6.21l17.93 0c3.43,0 4.46,2.78 4.46,6.21l0 6.57z" />
                       <polygon class="fil15" points="296.11,209.65 303.52,213.52 296.11,217.39 " />
                     </g>
-                    <path class="fil37"
+                    <path class="fil37 fb"
                       d="M207.23 136.4l3.12 0 0 -4.9 -3.87 0 -0.8 0c0,0 -2.94,-0.07 -4.81,2.36 0,0 -1.27,1.2 -1.29,4.72l-0 0 0 3.67 -4.62 0 0 5.2 4.62 0 0 13.44 5.32 0 0 -13.44 4.58 0 0.64 -5.2 -5.22 0 0 -3.67 -0 0c0.01,-0.41 0.2,-2.22 2.33,-2.18z">
 
                       <animateMotion dur="1s" begin="generalt2.mouseover" fill="freeze" path="M0,0 5,5 -10,-5 0,0"
@@ -3714,8 +3721,8 @@
                     </path>
 
 
-                    <g>
-                      <path class="fil38"
+                    <g class="inst">
+                      <path class="fil38 "
                         d="M314.75 145.23l-9.88 0c-4.38,0 -7.93,3.55 -7.93,7.94l0 9.88c0,4.38 3.55,7.93 7.93,7.93l9.88 0c4.38,0 7.93,-3.55 7.93,-7.93l0 -9.88c0,-4.38 -3.55,-7.94 -7.93,-7.94zm5.46 16.87l0 0c0,3.54 -2.87,6.41 -6.41,6.41l-7.99 0c-3.54,0 -6.41,-2.87 -6.41,-6.41l0 -7.99c0,-3.54 2.87,-6.41 6.41,-6.41l7.99 0c3.54,0 6.41,2.87 6.41,6.41l0 7.99z">
                         <animateMotion dur="0.9s" begin="generalt2.mouseover" fill="freeze" path="M0,0 2,2 0,-20 0,0"
                           calcMode="spline" keySplines="1 0 0.21 0.65" />
