--- a/index.html
+++ b/index.html
@@ -2072,17 +2072,20 @@
                           d="M544.52,77.11c1.42-1.42,10.27-3.82,16.84,4.26c5.49,6.76,2.67,15.88,1.62,21.91-1,5.76-1.7,13.14,5.33,13.66c5.22,16-15.59,12.64-15.59,12.64s-14-1-21.58-6.33c-3.67-2.6-13.4-12.43-8.91-17.44c6.35-7.09,6.38-8.77,9.6-22.14c2.32-7.43,9.55-9.03,12.69-6.56Z"
                           fill="#003853" />
                         <g id="e6wdEQ275vI34_tr" transform="translate(481.246552,147.523476) rotate(0)">
-                          <g transform="translate(-481.246551,-147.523476)">
-                            <g id="e6wdEQ275vI35_tr" transform="translate(441.50061,89.74847) rotate(0.155547)">
-                              <g transform="translate(-441.50061,-89.74847)">
-                                <path
-                                  d="M450.66,100.07c.424997-5.70917.088714-11.449507-1-17.07-3.17,1.24-1.53,8.08-1.53,8.08s-11-13.92-11.64-14.51-2.09.35-2.09.35-1.73-1.53-1.67.13s4.52,9.16,4.52,9.16-4-4.6-4.29-5.1-1.89,1.08.48,5.11c.9,1.53,5.94,13.13,11,13.28.21.49,3,3.72,3,3.72Z"
-                                  fill="#f0c0a7" />
+                          <g>
+                            <g transform="translate(-481.246551,-147.523476)">
+                              <g id="e6wdEQ275vI35_tr" transform="translate(441.50061,89.74847) rotate(0.155547)">
+                                <g transform="translate(-441.50061,-89.74847)">
+                                  <path
+                                    d="M450.66,100.07c.424997-5.70917.088714-11.449507-1-17.07-3.17,1.24-1.53,8.08-1.53,8.08s-11-13.92-11.64-14.51-2.09.35-2.09.35-1.73-1.53-1.67.13s4.52,9.16,4.52,9.16-4-4.6-4.29-5.1-1.89,1.08.48,5.11c.9,1.53,5.94,13.13,11,13.28.21.49,3,3.72,3,3.72Z"
+                                    fill="#f0c0a7" />
+                                </g>
                               </g>
+                              <path
+                                d="M451.58,97.28c13.27,22.68,24.78,32.32,30,37.53c11.89-3.25,22.56-8.69,29-11.11.089799-.067643.18711-.124688.29-.17c3.37-1.34,12.49-3.18,19.46-3.63-.8,1.34-10,10.5-13.27,22.92-.24,1.45-.52,2.83-.84,4.08-.568325,3.857291-.395228,7.787607.51,11.58c5.36,22.26-6.06,50.21-9.66,55.78-1.61,2.5-2.78,4.51-2.78,4.51s-4.73-2.64-4.27-5c.95-4.93,10.91-12.74,10.55-31.18-.28-14.22-1.76-16.39-3.23-27.09-.292052-2.265905-.462297-4.54585-.51-6.83-7.83-1.25-16.81-.18-28,.47-2.974888.273647-5.942416-.595159-8.3-2.43-.32-.22-.64-.46-1-.73-11-9-24.32-44-24.32-44c1.931848-1.810839,4.069849-3.388329,6.37-4.7Z"
+                                fill="#144665" />
                             </g>
-                            <path
-                              d="M451.58,97.28c13.27,22.68,24.78,32.32,30,37.53c11.89-3.25,22.56-8.69,29-11.11.089799-.067643.18711-.124688.29-.17c3.37-1.34,12.49-3.18,19.46-3.63-.8,1.34-10,10.5-13.27,22.92-.24,1.45-.52,2.83-.84,4.08-.568325,3.857291-.395228,7.787607.51,11.58c5.36,22.26-6.06,50.21-9.66,55.78-1.61,2.5-2.78,4.51-2.78,4.51s-4.73-2.64-4.27-5c.95-4.93,10.91-12.74,10.55-31.18-.28-14.22-1.76-16.39-3.23-27.09-.292052-2.265905-.462297-4.54585-.51-6.83-7.83-1.25-16.81-.18-28,.47-2.974888.273647-5.942416-.595159-8.3-2.43-.32-.22-.64-.46-1-.73-11-9-24.32-44-24.32-44c1.931848-1.810839,4.069849-3.388329,6.37-4.7Z"
-                              fill="#144665" />
+
                           </g>
                         </g>
                         <path
@@ -2115,15 +2118,33 @@
                           d="M635.57,233.26l-24-.45-33.77.49c0,0,.42,2.86,2.4,3c3.4,0,52.32-.05,53.54,0c1.64.09,1.83-3.04,1.83-3.04Z"
                           fill="#003853" />
                         <polygon points="600.53,202.55 571.99,202.46 580.87,233.18 608.94,233.11 600.53,202.55"
-                          fill="#fff" />
+                          fill="#fff"></polygon>
                         <polygon points="583.46,224.28 579.03,224.28 580.33,228.88 584.76,228.88 583.46,224.28"
-                          fill="#aedeeb" />
+                          fill="#aedeeb">
+                          <animate attributeName="points" dur="0.4s" fill="fleeze"
+                            values=" 584 228 L 580 228 L 580.33 228.88 L 584.76 228.88 L 584 228;583.46,224.28 579.03,224.28 580.33,228.88 584.76,228.88 583.46,224.28"
+                            begin="cons.mouseover" />
+                        </polygon>
                         <polygon points="589.13,220.17 584.69,220.17 587.15,228.88 591.59,228.88 589.13,220.17"
-                          fill="#68c2d4" />
+                          fill="#68c2d4">
+                          <animate attributeName="points" dur="0.4s" fill="fleeze"
+                            values=" 591 228 L 587 228 L 587.15 228.88 L 591.59 228.88 L 591 228;589.13,220.17 584.69,220.17 587.15,228.88 591.59,228.88 589.13,220.17"
+                            begin="cons.mouseover" />
+
+                        </polygon>
                         <polygon points="593.99,214.11 589.55,214.11 593.72,228.88 598.15,228.88 593.99,214.11"
-                          fill="#6ba1c4" />
+                          fill="#6ba1c4">
+                          <animate attributeName="points" dur="0.4s" fill="fleeze"
+                            values="597 227 L 593 227 L 593.72 228.88 L 598.15 228.88 L 597 227 ;593.99,214.11 589.55,214.11 593.72,228.88 598.15,228.88 593.99,214.11"
+                            begin="cons.mouseover" />
+
+                        </polygon>
                         <polygon points="599.67,210.08 595.24,210.08 600.54,228.88 604.98,228.88 599.67,210.08"
-                          fill="#fcce5b" />
+                          fill="#fcce5b">
+                          <animate attributeName="points" dur="0.4s" fill="fleeze"
+                            values=" 604 227 L 600 227 L 600.54 228.88 L 604.98 228.88 L 604 227 ;599.67,210.08 595.24,210.08 600.54,228.88 604.98,228.88 599.67,210.08"
+                            begin="cons.mouseover" />
+                        </polygon>
                         <path
                           d="M335.41,123.87c8.060991-5.58125,17.134003-9.535194,26.71-11.64c1-.2.58-2.8.58-2.8c2.758079-.697845,5.59521-1.033998,8.44-1c6.77-.13,14.67,2.29,14.67,2.29.036149.853558.116255,1.704686.24,2.55c8.834851,2.349079,17.28985,5.945232,25.11,10.68c2.4,9-2.09,36.37-6.29,60.2c1.303742,10.203234,2.081437,20.466812,2.33,30.75-15.09,7.49-50.68,7.8-61.23,2.53-.309487-7.785447.420273-15.57741,2.17-23.17-1.71-12.45-12.73-70.39-12.73-70.39Z"
                           fill="#fff" />
@@ -2215,7 +2236,12 @@
                           fill="#fff" />
                         <path
                           d="M349.48,218.83l4.35-10.41c3.74,1.64,5.42,6.85,3.76,12.3-1.81,6-6.91,9.93-11.39,8.88-3.2-.74-5.21-3.86-5.44-7.74Z"
-                          fill="#95dbe2" />
+                          fill="#95dbe2">
+                          <animate attributeName="d" dur="0.4s" fill="fleeze"
+                            values="M 349.48 218.83 L 353.83 208.42 c 3.74 1.64 5.17 6.58 4.17 7.58 c -3 -3 -3 -2 -0 0 c -3 1 -2 -4 -0 -0 Z;M349.48,218.83l4.35-10.41c3.74,1.64,5.42,6.85,3.76,12.3-1.81,6-6.91,9.93-11.39,8.88-3.2-.74-5.21-3.86-5.44-7.74Z"
+                            begin="cons.mouseover" />
+
+                        </path>
                         <path
                           d="M341.05,216.26v-.09c1.75-6,6.82-10,11.32-9c.371184.078821.73314.196121,1.08.35l-4.22,10.38Z"
                           fill="#fcce5b" />
