--- a/index.html
+++ b/index.html
@@ -2185,7 +2185,7 @@
                           d="M343.08,125.92c-3.2-1.84-6.65-2.27-7.67-2-4.2,12-1,43.22,5.83,55.24c1.93,3,5.25,2.78,6.75,2.5c24.53-4.57,55.66-20.8,55.66-20.8s-1.67-7.32-6.84-8.12C394.26,153.54,355,165,355,165s-.23-11.44-2.57-19.84Z"
                           fill="#fff" />
                         <g id="e6wdEQ275vI66_tr" transform="translate(738.648224,156.634858) rotate(-6.249615)">
-                          <g transform="translate(-738.648224,-156.634857)">
+                          <g class="an" transform="translate(-738.648224,-156.634857)">
                             <path
                               d="M694,152.13c-.497121-1.02575-.818263-2.127773-.95-3.26c0-.09-.59-3.64.29-3.35.64.21,2.19,1.84,1.89,3.23.21.15.49.48.66.56.53-1.66.63-2.36,1.26-2.69c1.29-.68,1.38,1.15,1.09,2.2.53-.06,1.83-.13,1.23,2.48c0,.1,0,.28,0,.31c1.41.22,3.3,1,6.51-.3.46-.66-.67-2.05-1.38-2.81-2.31-2.44-3.09-3.55-1.37-5.3.69.37,2.79,3.09,7.26,5.85c1.558601,1.068902,2.741159,2.60133,3.38,4.38c2.1,1.79,12.11,8.74,12.7,9.07-.23.75-4,3.48-4.53,5.05-2.12-1.57-7.73-7.15-11.76-9.64-3.4.32-9.33.12-10-.3-1.61-.8-4.32-1.78-4.52-2.74-2.76-1.07-1.76-2.74-1.76-2.74Z"
                               fill="#f0c0a7" />
